# moemenu

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
etc/: moemenu.toml  moemenu_run
src/: config.rs  defaults.rs  draw.rs  main.rs  menu.rs  search.rs  xorg.c  xorg.rs
