[package]
name = "moemenu"
version = "0.1.0"
authors = ["fence <fence@desu-mail.moe>"]
edition = "2018"
license = "GPL-3+"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.8"

[dependencies]
rgb = "0.8.25"

[dependencies.x11rb]
version = "0.8.0"
features = ["allow-unsafe-code", "render"]

[dependencies.cairo-rs]
version = "0.9"
features = ["xcb"]
