[package]
name = "moemenu"
version = "0.1.0"
authors = ["fence <fence@desu-mail.moe>"]
edition = "2018"
license = "GPL-3+"

[features]
default = ["config", "multimonitor"]

config = ["xdg", "toml", "css-color-parser"]
multimonitor = ["x11rb/xinerama"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.8"

[dependencies]
x11rb = { version = "0.8.0", features = ["allow-unsafe-code", "render", "xinerama"] }
cairo-rs = { version = "0.9", features = ["xcb"] }
rgb = "0.8.25"
xdg = { version = "2.2.0", optional = true }
toml = { version = "0.5.8", optional = true }
css-color-parser = { version = "0.1.2", optional = true}
